--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ body{background:#fff; font:500 16px/26px "Manrope", sans-serif; color:#303050;}
 .overlay{width:100%; position:fixed;background:rgba(0,0,0,.7); height:100%; right:0px; top:0px; display:none; z-index:1;}
 .nav .fa-times{display:none;}
 .hero{background:url(../images/hero.jpg) no-repeat center top; background-size:cover; min-height:1070px; background-size:cover; padding-top:70px;}
-.hero h1{font-size:50px; line-height:60px; color:#002259; font-weight:800; padding-top:30px;}
+.hero h1, .innerHero h1{font-size:50px; line-height:60px; color:#002259; font-weight:800; padding-top:30px;}
 .hero h2{font-size:16px; color:#404040; text-transform:uppercase; letter-spacing:5px;}
 .hero h2 span{display:inline-block;position:relative;}
 .hero h2 span::after{content:""; position:absolute; border-bottom:3px solid #6bd0ee; width:80px; display:block; right:-90px; top:9px; }
@@ -242,7 +242,7 @@ body{background:#fff; font:500 16px/26px "Manrope", sans-serif; color:#303050;}
 .outer{padding:0 0;}
 #big.owl-theme .owl-next, #big.owl-theme .owl-prev{width:25px; background-size:cover; height:61px;}
 .host-cover{padding:40px 0px 20px}
-.hero h1{font-size:40px; line-height:50px;} 
+.hero h1, .innerHero h1{font-size:40px; line-height:50px;} 
 }
 
 @media only screen and (max-width: 500px) {
@@ -250,11 +250,10 @@ body{background:#fff; font:500 16px/26px "Manrope", sans-serif; color:#303050;}
 .searchBox .btn{min-width:120px;}
 .hero{background-position:center bottom;}
 .gurantee{padding:40px 20px;}
-.hero h1{font-size:40px; line-height:50px;}
 .packageBox{margin:10px 0px;}
 .priceSec{padding:110px 0 50px;}
 .testimonialSec{padding-bottom:30px;}
-.hero h1{font-size:32px; line-height:42px; padding-top:10px;} 
+.hero h1, .innerHero h1{font-size:32px; line-height:42px; padding-top:10px;} 
 .domain-search h4{padding-bottom:20px;}
 .plan{padding-bottom:50px;}
 }
@@ -267,8 +266,7 @@ body{background:#fff; font:500 16px/26px "Manrope", sans-serif; color:#303050;}
 .gurantee h3{font-size:26px;}
 .hero h2 span::after{width:40px; right:-40px;}
 .topBar a{padding-right:15px;}
-.innerHero{padding:50px 0; min-height:inherit;}
-.innerHero h1{font-size:36px;}
+.innerHero{padding:80px 0; min-height:inherit; background-position:center bottom;}
 .priceTbl td span{right:20px;}
 .domain-search{padding-top:360px;}
 .hero::after{width:300px; height:324px ;top:23%; background-size:auto 100%;}
