--- a/css/style.css
+++ b/css/style.css
@@ -152,20 +152,25 @@ body{background:#fff; font:500 16px/26px "Manrope", sans-serif; color:#303050;}
 .planRow h2::before{content:""; position:absolute; left:0; top:-20px; display:block; background:url(../images/plan-icon.png) no-repeat; width:113px; height:113px;}
 .planRow h2 span{display:block; font-size:16px; font-weight:normal; color:#727882; padding-top:0px; text-align:left;}
 
+.tooltips {position: relative;display: inline-block; }
+.tooltips .tooltiptext {visibility: hidden;width: 120px;background-color: #002259;color: #fff;text-align: center;border-radius: 6px;padding: 5px 10px;position: absolute;z-index: 1;top: -1px;left: 110%; text-align:left; font-size:12px; line-height:16px; font-weight:400; font-style:normal;}
+.tooltips .tooltiptext::after {content: "";position: absolute;top: 12px;right: 100%;margin-top: -5px;border-width: 5px;border-style: solid;border-color: transparent #002259 transparent transparent;}
+.tooltips:hover .tooltiptext {visibility: visible;}
+
 @media only screen and (max-width: 1024px) {
 .header{padding-left:20px; padding-right:20px;}
 .menu-bar, .nav .fa-times{display:block; cursor:pointer;}
-.nav .navigation-menu{display: none; background:#333; box-shadow:0 -8px 6px 0 #000 inset;}
-.fa-bars{display:block; float:right; padding:8px; border-radius:3px; font-size:34px;margin-right:0; color:#002259; }
+.nav .navigation-menu{display: none; background:#002259; box-shadow:0 -8px 6px 0 #000 inset;}
+.fa-bars{display:block; float:right; padding:8px 0 8px 8px; border-radius:3px; font-size:34px;margin-right:0; color:#002259; }
 .navigation-menu .fa-bars{margin:10px;}
 .nav ul, .header .nav-right, .header .nav-left{clear:both; float:none;}
-.nav ul li{border:0 none; color:#fff; float: none; display:block; text-align:left; padding:0px 0px; border-radius:0px; border-bottom: 1px solid #0f2008;}
+.nav ul li{border:0 none; color:#fff; float: none; display:block; text-align:left; padding:0px 0px; border-radius:0px; border-bottom: 1px solid #041231;}
 .nav ul li a, .nav ul li.last a, .nav ul li a.active, .nav ul li a:hover, .nav ul li ul li a{padding:13px 20px!important; color:#fff!important; border-bottom:0px; border:0px; border-radius:0px ; font-weight: 400!important;}
 .nav .navigation-menu{position:fixed; top:0px; right:0px; display:none; width:300px; z-index:999999!important; height:100%; padding-bottom:20%;}
 .nav .navigation-menu ul{overflow:auto; height:120%; background:none;}
 .nav ul li.last{padding:0px;}
-.nav ul li a:hover, .nav ul li:hover, .nav ul li:hover a{background:#111;}
-.nav ul li a:hover, .nav ul li:hover{color:#fff; border:0px; background:#111;}
+.nav ul li a:hover, .nav ul li:hover, .nav ul li:hover a{background:#23bbe8;}
+.nav ul li a:hover, .nav ul li:hover{color:#fff; border:0px; background:#23bbe8;}
 .nav ul li a{font-size:14px; font-weight:300;} .nav ul li.active a{font-size:14px;}
 .nav ul li ul{position:static; width:auto;}
 .nav ul li:hover ul{display:none;}
