--- a/css/style.css
+++ b/css/style.css
@@ -239,6 +239,7 @@ body{background:#fff; font:500 16px/26px "Manrope", sans-serif; color:#303050;}
 .planRow h2{padding-left:0;text-align:center; font-size:24px; line-height:32px;}
 .planRow h2 span{text-align:center; line-height:24px; padding-top:10px;}
 .planRow h2::before{position:static; margin:0 auto;}
+.testimonial p{padding:0 30px 30px 30px;}
 }
 
 @media only screen and (max-width: 600px) {
